[package]
name = "asciicat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artem = { version = "2.0.2", default-features = false }
axum = "0.7.4"
color-eyre = "0.6.2"
image = "0.24.8"
#locat = { version = "0.5.0", registry = "abrasumente" }
opentelemetry = "0.22"
opentelemetry_sdk = "0.22"
opentelemetry-stdout = { version = "0.3.0", features = ["trace"] }
# opentelemetry-honeycomb = { git = "https://github.com/fasterthanlime/opentelemetry-honeycomb-rs", branch = "simplified", version = "0.1.0" }
opentelemetry-honeycomb = { path = "opentelemetry-honeycomb-rs" }
reqwest = { version = "0.11.24", features = ["json"] }
sentry = "0.32.2"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.18", features = ["json"] }

[profile.release]
debug = 1 # Include enough debug info for sentry to be useful
opt-level = "z"  # Optimize for size.
lto = true # Enable link-time optimization
